Fixes for responsive lightbox on mobile

--- a/src/main/webapp/resources/css/savie/styles.css
+++ b/src/main/webapp/resources/css/savie/styles.css
@@ -66,7 +66,7 @@ body {
 
 @media screen and (max-width: 992px) {
    .modal-dialog {
-      width: auto;
+      width: auto !important;
    }
 }
 
